# mobius

./: Cargo.toml  README.md  index.html  justfile
.github/workflows/: pages.yml
core/: Cargo.toml
core/examples/: review_loop.rs
core/src/: analyzer.rs  bus.rs  conductor.rs  graph.rs  lib.rs  mcp.rs  node.rs  orchestrator.rs
desktop/: Cargo.toml
desktop/src/: main.rs
docs/: DESIGN.md  USAGE.md
host/: Cargo.toml
host/src/: main.rs
protocol/: Cargo.toml
protocol/src/: lib.rs
public/: styles.css
src/: app.rs  bus.rs  components.rs  lib.rs  main.rs  presets.rs  state.rs
src/components/: chat.rs  graph_view.rs  inspector.rs  toolbar.rs
