[workspace]
members = ["core", "protocol", "desktop", "host"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Matthew Berger <matthewjordanberger@gmail.com>"]
homepage = "https://github.com/matthewjberger/mobius"
repository = "https://github.com/matthewjberger/mobius"
license = "MIT OR Apache-2.0"
edition = "2024"
rust-version = "1.95"

[package]
name = "mobius-ui"
description = "Mobius's page: the Leptos UI that renders and drives the agent graph over the bus"
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
leptos = { version = "0.7", features = ["csr"] }
protocol = { path = "protocol" }
hearsay = "0.1"
postcard = { version = "1", features = ["alloc"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
send_wrapper = "0.6"
wasm-bindgen = "=0.2.115"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlDivElement",
    "HtmlInputElement",
    "HtmlTextAreaElement",
    "CssStyleDeclaration",
    "Event",
    "EventTarget",
    "KeyboardEvent",
    "MessageEvent",
    "WebSocket",
    "BinaryType",
    "Blob",
    "Location",
] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
